[package]
name = "blockchain-example"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10" # For cryptographic hashing
serde = { version = "1.0", features = ["derive"] } # For serialization
serde_json = "1.0" # For JSON serialization
tokio = { version = "1", features = ["full"] }
rocksdb = "0.22.0"
rsa = "0.9.6"
rand = "0.8.5"
pem = "3.0.4"
